# A2A-deepresearch-images

./: .gitignore  greeting_agent.py  pyproject.toml  run_and_test.py
backend/: AGENT_SETUP.md  greeting_agent.py  greeting_agent_card.json  image_agent.py  image_agent_card.json  main.py  manager_agent.py  pyproject.toml  run_greeting_agent.py  run_image_agent.py  run_manager_agent.py  start_agents.sh  stop_agents.sh  testing_backend.ipynb
backend/agents/src/: test-agent.ipynb
backend/agents/src/agent/: configuration.py
frontend/: README.md  package.json
frontend/src/: App.tsx
